public_html/layouts/basic/styles/_Style.scss
/* ... */
.referenceGroup .referenceModulesListGroup .chosen-container, .phoneGroup .chosen-container {
	min-width: 100px !important;
	text-align: left;
	height: 32px;
}

.referenceGroup .referenceModulesListGroup .chosen-container .chosen-single, .phoneGroup .chosen-container .chosen-single {
	border: 0;
	height: 32px;
	border-radius: 0;
}

.quickCreateContent .referenceGroup .referenceModulesListGroup .chosen-container {
	min-width: 80px !important;
}

.chosen-container-single .chosen-single {
	background: #fff;
}

.modal-backdrop {
	z-index: 1030;
}

.commonActionsContainer .badge {
	font-size: 11px;
	top: -3px;
}

.currencyTable .fieldLabel {
	width: 20%;
	min-width: 150px;
}

.widget_header .dropdown-toggle + .dropdown-menu {
	left: 15px;
}

#convertLeadMapping {
	th:not(.blockHeader), tbody tr td, .blockHeader th {
		width: 25%;
		text-align: center;
	}
}

#mappingToGenerate {
	th:not(.defaultHeader):not(.actionsHeader) {
		width: 24%;
	}

	.defaultHeader {
		width: 20%;
	}

	.actionsHeader {
		width: 8%;
	}
}

.modalEditStatus .popover.fade, #modalEditStatus .popover.fade {
	min-width: 400px;
}

.statsContainer .widgetChartContainer {
	width: 100%;
	height: 300px;
}

@media only screen and (min-width: 1200px) {
	.pull-right-lg {
		float: right;
	}

	.pull-left-lg {
		float: left;
	}

	.selectSearch {
		display: block;
	}

	.detailViewTable .fieldValue .js-detail-quick-edit {
		display: none;
	}
}

@media only screen and (max-width: 1200px) {
	.o-base-container:not(.c-menu--open) .c-menu__container:hover + .basePanel {
		width: calc(100% - 180px);
		-webkit-transition: all ease-in-out 0.3s 0.5s, z-index 0.3s 0.8s;
		transition: all ease-in-out 0.3s 0.5s, z-index 0.3s 0.8s;
	}

	.pull-left-md {
		float: left;
	}

	.pull-right-md {
		float: right;
	}

	.tl-media-content-container {
		width: 60%;
	}

	.opacity .actions {
		opacity: 1;
	}

	.singleComment .commentActionsDiv {
		display: block;
	}

	.selectSearch {
		display: none;
	}

	.listViewEntriesTable tr td .actions .actionImages {
		opacity: 1;

		/*for IE*/
		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
		filter: alpha(opacity=100);
	}

	.treeView li .toolbar-handle .toolbar {
		display: inline !important;
	}
}

@media only screen and (max-width: 1200px) and (min-width: 992px) {
	.paddingTop10-md {
		padding-top: 10px;
	}
}

@media screen and (min-width: 1200px) {
	#quickCreate .modal-body {
		max-height: none !important;
	}

	#mediumNav, #headerLinksCompact {
		display: none;
	}

	#largeNav {
		margin-left: 10px;
		margin-right: 0;
	}
}

@media screen and (max-width: 1200px) and (min-width: 992px) {
	.companyLogo {
		width: 100%;
	}

	* {
		zoom: 1 !important;
	}
}

@media only screen and (max-width: 992px) {
	.textAlignRight {
		text-align: left;
	}

	.sortTableUl {
		list-style-type: none;
		float: left;
		min-height: 1px;
		padding: 2px;
		width: 100% !important;
	}

	#dependencyGraph .tableHeading {
		padding-top: 70px;
		-webkit-transform: rotate(90deg);
		-moz-transform: rotate(90deg);
		-o-transform: rotate(90deg);
		-ms-transform: rotate(90deg);
		transform: rotate(90deg);
		white-space: nowrap;
	}

	.commentsList.commentsBody .liStyleNone {
		padding-left: 20px;
	}

	.commentContainer .commentDetails {
		width: 100%;
	}

	.summaryWidgetContainer .widget_header .summaryWidgetIcon {
		padding-right: 0;
		padding-left: 0;
	}

}

@media screen and (max-width: 992px) {
	.detailViewTable .fieldsLabelValue {
		border-bottom: 1px solid #ddd;
	}

	.quickCreateContent .fieldsLabelValue {
		&.narrow {
			padding-top: 5px;
			padding-bottom: 2px;
		}

		&.medium {
			padding-top: 10px;
			padding-bottom: 10px;
		}

		&.wide {
			padding-top: 15px;
			padding-bottom: 15px;
		}

		border-bottom: 1px solid $light;
	}

	.pull-right-sm {
		float: right;
	}

	.pull-left-sm {
		float: left;
	}

	.form-horizontal .form-group .description-field {
		text-align: left;
	}

	.bodyContents {
		margin: 0 !important;
	}

	.col-md-3#headerLinks {
		padding: 5px 5px 0;
	}

	.menuBar .col-md-9, .col-md-3#headerLinks {
		-webkit-box-sizing: border-box;
		-moz-box-sizing: border-box;
		box-sizing: border-box;
		word-wrap: break-word;
		min-width: 80px;
	}

	.menuBar .col-md-9 li.tabs:first-child > a, .col-md-3#headerLinks li.tabs:first-child > a {
		padding: 10px 12px 9px;
	}

	.quickCreateModules {
		width: 100% !important;
		padding: 0 !important;
	}
}

@media only screen and (min-width: 992px) {
	.conditionList .conditionField {
		padding-left: 0;
	}

	.quickCreateContent {
		.fieldRow {
			border-top: 1px solid #ddd;
			display: table;
		}

		.fieldsLabelValue {
			&.narrow {
				padding-top: 5px;
				padding-bottom: 2px;
			}

			&.medium {
				padding: 10px 0;
			}

			&.wide {
				padding-top: 15px;
				padding-bottom: 15px;
			}

			vertical-align: top;
			border-right: 1px solid #ddd;
			display: table-cell;
			float: none;

			&::before {
				width: 41.66666667%;
			}
		}
	}

	.move-action {
		right: -309px !important;
	}

	#centerPanel {
		-webkit-transition: all 0.5s ease;
		-moz-transition: all 0.5s ease;
		-o-transition: all 0.5s ease;
		transition: all 0.5s ease;
	}

	.knowledgePresentationText {
		font-size: 2em;
	}
}
/* ... */

